modified aboutUs and removed addStock box

--- a/application/views/aboutus.html
+++ b/application/views/aboutus.html
@@ -49,7 +49,7 @@
 
                         <ul class="collapse list-unstyled" id="aboutMe">
                             <li>
-                                <a href="#"> 關於我們 </a>
+                                <a href="/aboutUs"> 關於我們 </a>
                             </li>
                         </ul>
                     </li>
@@ -67,9 +67,10 @@
             </div>
 
             <div class="m-2 p-2">
-                <h2>Not Found</h2>
+                <h2>關於我們</h2>
                 <hr>
-                <p style="color:#f00"></p>
+                <p style="color:rgb(0, 0, 0)">這是一個以投信買超為選股依據的股票篩選器。</p>
+                <p style="color:rgb(0, 0, 0)">未來將持續增加篩選項目！</p>
             </div>
         </div>
     </div>
