--- a/application/views/strategy.html
+++ b/application/views/strategy.html
@@ -122,7 +122,7 @@
                     </table>
                 </div>
 
-                <div class="box-s1">
+                <!-- <div class="box-s1">
                     <h5>股票新增</h5>
                     <div class="form-row">
                         <div class="form-group col-md-3 mx-3">
@@ -147,7 +147,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
             </div>
         </div>
